pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pongapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pongapp
  template:
    metadata:
      labels:
        app: pongapp
    spec:
      containers:
      - name: pongapp
        image: siddarthal/pong:latest
