pong/manifests/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-nodesvc
spec:
  type: NodePort
  selector:
    app: pongapp
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 3600
      targetPort: 3000
