pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
spec:
  type: ClusterIP
  selector:
    app: pongapp
  ports:
  - port: 2600
    protocol: TCP
    targetPort: 3000
