pong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pong-svc
            port: 
              number: 3000
      - path: /log
        pathType: Prefix
        backend:
          service:
            name: pong-svc
            port: 
              number: 3001
